Update YEG and YYC lat and lon

--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -266,7 +266,9 @@
    "id": "dadb6b13",
    "metadata": {},
    "source": [
-    "Create a pixels dataframe from south to north, since that's how the pixels are wired."
+    "Create a pixels dataframe from south to north, since that's how the pixels are wired.\n",
+    "\n",
+    "Also correct the latitude and longitude for Edmonton and Calgary, since we were just using the mean values including nearby cities."
    ]
   },
   {
@@ -285,6 +287,12 @@
     "    lons.append(df[df['PixelName']==pixels.iloc[i]['City']].iloc[0]['Longitude'])\n",
     "pixels['Latitude'] = lats\n",
     "pixels['Longitude'] = lons\n",
+    "\n",
+    "pixels.loc[pixels['City']=='Edmonton', 'Latitude'] = 53.5444\n",
+    "pixels.loc[pixels['City']=='Edmonton', 'Longitude'] = -113.4909\n",
+    "pixels.loc[pixels['City']=='Calgary', 'Latitude'] = 51.0486\n",
+    "pixels.loc[pixels['City']=='Calgary', 'Longitude'] = -114.0708\n",
+    "\n",
     "pixels = pixels.sort_values('Latitude').reset_index(drop=True)\n",
     "pixels['Pixel'] = pixels.index\n",
     "pixels"
@@ -592,7 +600,7 @@
     "fig2.add_scatter(y=backwards_map['Latitude'], x=backwards_map['Longitude_reversed'], text=backwards_map.index, mode='markers+text', textposition='bottom left', marker=dict(size=10))\n",
     "fig2.update_xaxes(showticklabels=False, title=None).update_yaxes(showticklabels=False, title=None)\n",
     "fig2.update_layout(showlegend=False, plot_bgcolor='rgba(0,0,0,0)', margin=dict(l=0, r=0, t=30, b=0))\n",
-    "fig2.write_image('output/reversed_wire_map.png')\n",
+    "#fig2.write_image('output/reversed_wire_map.png')\n",
     "fig2.show()"
    ]
   }
