Enable dark mode (all LEDs off)

--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -603,6 +603,29 @@
     "#fig2.write_image('output/reversed_wire_map.png')\n",
     "fig2.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06f8ad86",
+   "metadata": {},
+   "source": [
+    "## Enable Dark Mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3886377b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "status = pd.read_csv('../docs/status.csv')\n",
+    "for n in range(len(status)):\n",
+    "    status.iloc[n][1:] = 0\n",
+    "status.to_csv('../docs/status.csv', index=False)\n",
+    "status"
+   ]
   }
  ],
  "metadata": {
