Add light mode code

--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -626,6 +626,27 @@
     "status.to_csv('../docs/status.csv', index=False)\n",
     "status"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "189f2e40",
+   "metadata": {},
+   "source": [
+    "# Enable Light Mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d596cc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "status = pd.read_csv('../docs/status_on.csv')\n",
+    "status.to_csv('../docs/status.csv', index=False)\n",
+    "status"
+   ]
   }
  ],
  "metadata": {
